--- a/index.html
+++ b/index.html
@@ -21,14 +21,19 @@
             padding-bottom: 20px;
         }
         #input-container {
-            border-bottom: 10px solid;
             padding-top: 50px;
-            padding-bottom: 850px;
+            padding-bottom: 50px;
             padding-left: 20px;
         }
         #create-gun-form, #create-loadout-form {
             padding-left: 20px;
-            
+        }
+        .login-container {
+            float: left;
+            padding-left: 20px;
+        }
+        h2 {
+            padding-left: 20px;
         }
     </style>
 </head>
@@ -36,16 +41,18 @@
 
     <h1>Call of Duty: Modern Warfare II Gun Tracker</h1>
 
+    <h2>Enter Gun Info Here!</h2>
+
     <form id = "create-gun-form">
-        <input type ="text" name ="name" placeholder="name" />
-        <input type ="text" name ="class" placeholder ="class" />
-        <input type ="text" name ="skin" placeholder ="skin" />
-        <input type ="text" name="loadout" placeholder ="loadout"/>
+        <input type ="text" name ="name" placeholder="Name" />
+        <input type ="text" name ="class" placeholder ="Class" />
+        <input type ="text" name ="skin" placeholder ="Skin" />
+        <input type ="text" name="loadout" placeholder ="Loadout"/>
         <button type="submit" value = "Add Gun" class="btn btn-dark">Add Gun</button>
     </form>
 
     <form id = "create-loadout-form">
-        <input type = "text" name = "name" placeholder = "loadout name" />
+        <input type = "text" name = "name" placeholder = "Loadout Name" />
         <button type="submit" value = "Create Loadout" class="btn btn-dark">Create Loadout</button>
     </form>
 
@@ -58,18 +65,21 @@
         <div id = "loadout-message-container"></div>
     </div>
 
-    <div class = "container-text-center">
-          <div class = "row">
-          <div class = "col"></div>
-          <div class = "col"></div>
-        </div>
-        <div class = "row">
-          <div class = "col"></div>
-          <div class = "col"></div>
-          <div class = "col"></div>
-        </div>
+    <h2>Login Here!</h2>
+
+    <div class = "login-container">
+
+    <div class="enter-container">
+        <label for="uname"><b>Username: </b></label>
+        <input type="text" placeholder="Enter Username" name="uname" required>
+  
+        <label for="psw"><b>Password: </b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+          
+        <button type="submit" class="btn btn-dark">Login</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 </body>
 </html>
