--- a/index.html
+++ b/index.html
@@ -125,14 +125,6 @@
             font-size: large;
             color:#fefefe;
         }
-        #logo {
-            height: 150px;
-        }
-        #pistols {
-            padding-top: 180px;
-            height: 30px;
-            float: right;
-        }
         .nav {
             padding-left: 50px;
         }
@@ -140,7 +132,7 @@
 </head>
 <body>
 
-<h1><img src="./images/CODMWII.webp" id="logo"></h1>
+<h1>Call of Duty: Modern Warfare II</h1>
 
     <!-- NavBar -->
 <div class="nav">
@@ -282,7 +274,7 @@
         <li>Node.js</li><br>
       </ul>
       <br>
-    Thank you so much for using my application! I hope you enjoy!
+    Thank you so much for using my app! I hope you enjoy!
     </p>  
 </main>
 <footer id="contact">
@@ -290,7 +282,4 @@
     <br>
     2023 
 </footer>
-<div id="pistols">
-<img src="./images/doublepistols.png" width="800" alt="Double Pistols Are Cool">
-</div>
 </html>
